# portfolio

./: .gitignore  README.md  _config.yml
Financial Chat Assistant/: main.py  pyproject.toml  run_api.py
Financial Chat Assistant/notebooks/: FinancialChatAssistant(with charts).ipynb
Financial Chat Assistant/src/: .env.example  __init__.py  app_state.py  config.py  diagnose_images.py  document_processor.py  health_check.py  indexing.py  main.py  models.py  query_engine.py
Financial Chat Assistant/src/routers/: __init__.py  document.py  health.py  query.py
Financial Chat Assistant/tests/: manual_tests.http  test_document_processor.py  test_indexing.py  test_logging.py  test_models.py  test_query_engine.py
