[project]
name = "financial-chat-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.7.0",
    "jupyter>=1.1.1",
    "llama-index>=0.14.8",
    "llama-index-core>=0.14.8",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-llms-openai>=0.6.9",
    "llama-parse>=0.6.54",
    "nest-asyncio>=1.6.0",
    "notebook>=7.5.0",
    "openai>=2.8.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
